--- a/build.yml
+++ b/build.yml
@@ -1,18 +1,8 @@
-name: actions
+name: hello-world
 on: push
 jobs:
-  build:
+  my-job:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-      - name: build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-      - name: test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
+      - name: my-step
+        run: echo "Hello World!
