--- a/build.yml
+++ b/build.yml
@@ -1,8 +1,23 @@
-name: hello-world
-on: [push]
+name: Rust
+
+on:
+  push:
+    branches: [ actions ]
+  pull_request:
+    branches: [ actions ]
+
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
-  my-job:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: my-step
-        run: echo "Hello World!
+    - uses: actions/checkout@v2
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
+
