--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: table
       - name: build
         uses: actions-rs/cargo@v1
         with:
@@ -16,3 +16,8 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
+      - name: lint
+        uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
